src/test/resources/amyc/typer/failing/IfAndErrorWrong.grading.amy
object IfAndErrorWrong
  val x: Int(32) = if (true) { error("") } else { "" };
  x
end IfAndErrorWrong
